test/sema/positive/subtyping3_rec.impala
fn main(x: ([int*2], int)) -> () {
    let y : ([int], int) = x;
}
