test/sema/negative/def_array.impala
fn main() -> () {
    let todo:[int*1] = [0, 0];
}
